Fix: resolve mobile image gaps and improve card responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,8 @@ body {
     flex: 1;
 }
 
+/* Header */
+
 header {
     background-color: #ffdab9;
     padding: 12px;
@@ -38,8 +40,7 @@ header {
 .nav-top {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    gap: 12px;
+    gap: 16px;
 }
 
 /* Nav toggle*/
@@ -70,12 +71,10 @@ nav {
 }
 
 
-
-/* Logo */
 .nav-logo {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: right;
+    justify-content: right;
 
 }
 
@@ -117,6 +116,7 @@ nav {
     
 }
 
+/*Main*/
 main {
     padding-top: 110px;
 }
@@ -161,18 +161,17 @@ main {
     background-color: #f5c2b3;
 }
 
-/* Cards places section */
+/* Cards section Home page */
 
 .card-img {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 100%;
     border-radius: 12px;
-    margin-bottom: 16px;
+    margin-bottom: 0;
     opacity: 1;
     display: block;
     transition: .5s ease;
     backface-visibility: hidden;
-    aspect-ratio: 16 / 10;
     object-fit: cover;
 }
 
@@ -181,17 +180,22 @@ main {
     grid-template-columns: 1fr; /*mobile*/
     gap: 16px;
     padding: 12px;
+    align-items: center;
     
 }
 
 .card {
     position: relative;
+    overflow: hidden;
+    border-radius: 12px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    aspect-ratio: 4 / 3; /*desktop card shap*/
+    
 }
 
 .card-content {
     transition: .3s ease;
-    opacity: 0;
+    opacity: 1;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -255,7 +259,7 @@ main {
 }
 
 /*layout for iframe be capable to cover background of box */
-#map-frame {
+.map-frame {
     position: absolute;
     inset: 0;
     width: 100%;
@@ -363,6 +367,19 @@ footer p {
     color: #ff6f61;
 }
 
+
+/*Media query for hover only on desktop devices */
+@media (hover: hover) and (pointer: fine) {
+    .card:hover .card-img {
+        opacity: 0.3;
+    }
+
+    .card:hover .card-content {
+        opacity: 1;
+    }
+}
+
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     nav {
@@ -433,7 +450,6 @@ footer p {
 
     .card-img {
         width: 100%;
-        aspect-ratio: 4 / 3;
         object-fit: cover;
         border-radius: 12px;
         
